2011-06-17  Tobias Burnus

	PR fortran/49324
	* gfortran.dg/alloc_comp_assign_11.f90: New.

2011-06-16  Jason Merrill  <jason@redhat.com>

	PR c++/49229
	* g++.dg/cpp0x/sfinae26.C: New.

	PR c++/49251
	* g++.dg/cpp0x/variadic113.C: New.

2011-06-16  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport form main line
	2011-06-09  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/49307
	* gcc.dg/pr49307.c: New.

2011-06-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49419
	* gcc.c-torture/execute/pr49419.c: New test.

	Backported from mainline
	2011-06-13  Edmar Wienskoski  <edmar@freescale.com>

	PR target/44618
	* gcc.target/powerpc/outofline_rnreg.c: New testcase.

2011-06-14  Jason Merrill  <jason@redhat.com>

	* g++.dg/other/error23.C: Adjust error message.
	* g++.dg/other/error32.C: Likewise.

	PR c++/49369
	* g++.dg/cpp0x/decltype30.C: New.

2011-06-14  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/49103
	* gfortran.dg/pr49103.f90: New test.

	PR rtl-optimization/49390
	* gcc.c-torture/execute/pr49390.c: New test.

2011-06-10  Janis Johnson  <janisjo@codesourcery.com>

	* gcc/testsuite/gcc.target/arm/20090811-1.c: Skip for incompatible
	options, do not override other options.
	* gcc/testsuite/gcc.target/arm/combine-cmp-shift.c: Skip for
	incompatible options.
	* gcc/testsuite/gcc.target/arm/pr45094.c: Likewise.
	* gcc/testsuite/gcc.target/arm/scd42-1.c: Likewise.
	* gcc/testsuite/gcc.target/arm/scd42-3.c: Likewise.
	* gcc/testsuite/gcc.target/arm/thumb-ltu.c: Likewise.

	* lib/target-supports.exp
	(check_effective_target_arm_neon_fp16_ok_nocache): Return 0 if
	multilib flags use -mfpu with a value other than neon-fp16.

2011-06-08  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline
	2011-06-01  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/49238
	* gcc.c-torture/compile/pr49238.c: New.

2011-06-07  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/enum19.C: New.

2011-06-07  Jakub Jelinek  <jakub@redhat.com>

	PR gcov-profile/49299